# nbtview

./: .clang-format  .gitignore  CMakeLists.txt  README.md  nbt-experimental.cpp
.github/workflows/: github-actions-doxygen.yml  github-actions-test.yml
apps/: CMakeLists.txt  nbtshow.cpp
benchmarks/: bench_chunks.cpp  bench_utils.cpp
doc/: CMakeLists.txt  Doxyfile.in  conf.py  index.rst
html/: BinaryDeserializer_8hpp.html  BinaryDeserializer_8hpp__incl.map  BinaryDeserializer_8hpp__incl.md5  BinaryDeserializer_8hpp_source.html  BinaryReader_8hpp.html  BinaryReader_8hpp__dep__incl.map  BinaryReader_8hpp__dep__incl.md5  BinaryReader_8hpp__incl.map  BinaryReader_8hpp__incl.md5  BinaryReader_8hpp_source.html  BinaryWriter_8hpp.html  BinaryWriter_8hpp__dep__incl.map  BinaryWriter_8hpp__dep__incl.md5  BinaryWriter_8hpp__incl.map  BinaryWriter_8hpp__incl.md5  BinaryWriter_8hpp_source.html  Deserializer_8hpp.html  Deserializer_8hpp__dep__incl.map  Deserializer_8hpp__dep__incl.md5  Deserializer_8hpp__incl.map  Deserializer_8hpp__incl.md5  Deserializer_8hpp_source.html  Region_8hpp.html  Region_8hpp__incl.map  Region_8hpp__incl.md5  Region_8hpp_source.html  Serializer_8hpp.html  Serializer_8hpp__incl.map  Serializer_8hpp__incl.md5  Serializer_8hpp_source.html  Stringifier_8hpp_source.html  Tag_8hpp.html  Tag_8hpp__dep__incl.map  Tag_8hpp__dep__incl.md5  Tag_8hpp__incl.map  Tag_8hpp__incl.md5  Tag_8hpp_source.html  annotated.html  classes.html  classnbtview_1_1BinaryDeserializer-members.html  (+110 more)
html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  enums_0.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  files_7.js  functions_0.js  functions_1.js  (+23 more)
nbtview/: BinaryDeserializer.cpp  BinaryDeserializer.hpp  BinaryReader.hpp  BinaryScanner.cpp  BinaryScanner.hpp  BinaryWriter.hpp  CMakeLists.txt  Compound.cpp  Compound.hpp  Compound_fwd.hpp  Deserializer.hpp  List.cpp  List.hpp  List_fwd.hpp  NbtReader.cpp  NbtReader.hpp  Region.cpp  Region.hpp  Serializer.hpp  Stringifier.cpp  Stringifier.hpp  Tag.cpp  Tag.hpp  nbt_types.hpp  nbtview.cpp  nbtview.hpp  tag_utilities.cpp  tag_utilities.hpp  test.c  test_nbtview_detail.cpp  utils.hpp  zlib_utils.cpp  zlib_utils.hpp
source/: nbtview.cpp
test/: test_BinaryDeserializer.cpp  test_BinaryReader.cpp  test_BinaryScanner.cpp  test_BinaryWriter.cpp  test_Chunks.cpp  test_Region.cpp  test_Serializer.cpp  test_bigtest.cpp  test_nbtview.cpp
test/test_data/: r.0.0.mca
xml/: BinaryDeserializer_8cpp.xml  BinaryDeserializer_8hpp.xml  BinaryReader_8hpp.xml  BinaryWriter_8hpp.xml  Deserializer_8hpp.xml  Region_8cpp.xml  Region_8hpp.xml  Serializer_8hpp.xml  Stringifier_8cpp.xml  Stringifier_8hpp.xml  Tag_8cpp.xml  Tag_8hpp.xml  classnbtview_1_1BinaryDeserializer.xml  classnbtview_1_1BinaryReader.xml  classnbtview_1_1BinaryWriter.xml  classnbtview_1_1Compound.xml  classnbtview_1_1Deserializer.xml  classnbtview_1_1List.xml  classnbtview_1_1Region.xml  classnbtview_1_1Region__File.xml  classnbtview_1_1Tag.xml  classnbtview_1_1UnexpectedEndOfInputException.xml  classnbtview_1_1zlib_1_1Inflater.xml  dir_b518aaa42d9a49e416519d434cd9d8cf.xml  index.xml  namespacenbtview.xml  namespacenbtview_1_1detail.xml  namespacenbtview_1_1zlib.xml  nbtview_8cpp.xml  nbtview_8hpp.xml  structnbtview_1_1Inflation__Status.xml  structnbtview_1_1None.xml  structnbtview_1_1Region.xml  structnbtview_1_1Region_1_1ChunkData.xml  structnbtview_1_1Region_1_1Chunk__Data.xml  structnbtview_1_1StringifyTag.xml  structnbtview_1_1StringifyTagType.xml  structnbtview_1_1TagID.xml  structnbtview_1_1array__format.xml  structnbtview_1_1detail_1_1PayloadSerializer.xml  (+3 more)
